feat: Implementação de cadastro de médico no banco de dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
-spring.application.name=api
+# spring.application.name=api
+
+# Implementação personalizada do dialeto precisa ser fornecida.
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Altera a estrutura da tabela caso a entidade tenha mudanças.
+# spring.jpa.hibernate.ddl-auto=update
+
+# Acesso ao banco de dados.
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/vollMed_api
+spring.datasource.username=USUARIO_DO_BD
+spring.datasource.password=SENHA_DO_BD
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
