--- a/pom.xml
+++ b/pom.xml
@@ -70,10 +70,12 @@
     </dependency>
 
     <dependency>
-      <groupId>com.mysql</groupId>
-      <artifactId>mysql-connector-j</artifactId>
-      <scope>runtime</scope>
-    </dependency>
+    	<groupId>mysql</groupId>
+    	<artifactId>mysql-connector-java</artifactId>
+		<version>8.0.33</version> 
+    	<scope>runtime</scope>
+	</dependency>
+
 	</dependencies>
 
 	<build>
