chore: adicionar configuração para exibir o SQL gerado pelas requisições no Hibernate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/vollMed_api
 spring.datasource.username=USUARIO_DO_BD
 spring.datasource.password=SENHA_DO_BD
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-
+# esse comando imprime os script SQL que forem disparado.
+spring.jpa.show-sql=true
+# Esse comando formata o script SQL
+spring.jpa.properties.hibernate.format_sql=true
