chore(config): ajustar propriedades de conexão com o banco e Hibernate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 # Esse comando formata o script SQL
 spring.jpa.properties.hibernate.format_sql=true
+# Tratamento de erro 500 (essa linha está com erro de digitação)
+server.error.include-stacktrace=never
