chore(config): externalizar secret JWT para variável de ambiente
- Alterado application.properties para buscar o valor de api.security.token.secret a partir da variável de ambiente JWT_SECRET
- Melhora a segurança ao evitar hardcode de segredo sensível no código-fonte

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 # Tratamento de erro 500 (essa linha está com erro de digitação)
 server.error.include-stacktrace=never
+
+api.security.token.secret=${JWT_SECRET}
