chore: atualiza configurações no application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,35 @@
 # spring.application.name=api
 
-# Implementação personalizada do dialeto precisa ser fornecida.
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+# Acesso ao banco de dados SQL.
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.datasource.url=jdbc:mysql://localhost:3306/vollMed_api
+# spring.datasource.username=USUARIO_DO_BD
+# spring.datasource.password=SENHA_DO_BD
+# spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+# spring.datasource.url=${DATASOURCE_URL}
+# spring.datasource.username=${DATASOURCE_USERNAME}
+# spring.datasource.password=${DATASOURCE_PASSWORD}
 
-# Altera a estrutura da tabela caso a entidade tenha mudanças.
-# spring.jpa.hibernate.ddl-auto=update
+# Acesso ao banco de dados PostgreSQL
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DATASOURCE_PASSWORD}
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-# Acesso ao banco de dados.
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/vollMed_api
-spring.datasource.username=USUARIO_DO_BD
-spring.datasource.password=SENHA_DO_BD
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+
 # esse comando imprime os script SQL que forem disparado.
-spring.jpa.show-sql=true
+# spring.jpa.show-sql=true
+spring.jpa.show-sql=false
+
 # Esse comando formata o script SQL
-spring.jpa.properties.hibernate.format_sql=true
+# spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=false
+
 # Tratamento de erro 500 (essa linha está com erro de digitação)
 server.error.include-stacktrace=never
 
+
+# JWT Token Secret
 api.security.token.secret=${JWT_SECRET}
